# CLI_Agent_Office

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
hooks/: launch-office.sh
src/: main.ts  renderer.ts  sprites.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  office_manager.rs  parser.rs  state_machine.rs  watcher.rs
