[package]
name = "cli-agent-office"
version = "0.1.0"
description = "Animated pixel art office that reacts to Claude Code activity"
authors = ["Calvin Tirrell"]
edition = "2021"

[lib]
name = "cli_agent_office_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
